test/positive/NativeStaticMethod.java
public class NativeStaticMethod {
    public NativeStaticMethod() {}
    public native static void f();
}
