test/negative/InterfaceBody.java
public interface InterfaceBody {
    public void f() {}
}
